@@ -162,6 +162,7 @@ t/91_username_in_templates.t
 t/92_node_name_from_cgi_obj.t
 t/93_redirect_without_spaces.t
 t/94_leaflet.t
+t/95_multiple_index.t
 t/templates/15_test.tt
 wiki.cgi
 META.json
