@@ -4,10 +4,14 @@ More detailed changelogs can be found at
 <http://dev.openguides.org/log/trunk>.
 
 0.67    ?
-        action=index now uses a new form of parameters - instead of e.g.
+        Added support for indexing on category and locale at the same time.
+          As part of this, action=index now uses a new form of parameters, so
+          instead of e.g.
             action=index;index_type=locale;index_value=holborn
           you should use
             action=index;loc=holborn
+          or indeed
+            action=index;cat=pubs;loc=holborn
           Format params such as format=map work as before.  Old-style URLs
           will automatically redirect to new-style ones.
 	Added project metadata to Build.PL (#285).
